Corrected som syntax errors and typos

--- a/accessibility/skip-links/01-index.html
+++ b/accessibility/skip-links/01-index.html
@@ -16,7 +16,7 @@
     <nav aria-label="Skip links">
       <ul class="off-screen">
         <li><a href="#a11y-primary-nav" class="skip-link">Skip to primary navigation</a></li>
-        <li><a href="a11y-main-content" class="skip-link">Skip to main content></a></li>
+        <li><a href="#a11y-main-content" class="skip-link">Skip to main content</a></li>
       </ul>
     </nav>
 
@@ -74,7 +74,7 @@
       </div>
     </header>
     <!– Main –>
-    <main id="a11y-main-conent" tabindex="-1">
+    <main id="a11y-main-content" tabindex="-1">
       <h1 class="visually-hidden">Homepage</h1>
       <!– Hero section –>
       <section class="section-hero hero-homepage" data-section-theme="dark">
