--- a/accessibility/fix-a11y/05-index.html
+++ b/accessibility/fix-a11y/05-index.html
@@ -160,7 +160,7 @@
               <form action="#" method="post">
                 <div class="input-group">
                   <label class="visually-hidden" for="email"></label>
-                  <input id="email" class="form-control" type="text" name="email" autocomplete="email" required aria-required="true">
+                  <input class="form-control" type="email" name="email" id="email"autocomplete="email" required aria-required="true">
                   <div class="input-group-btn"><a class="btn" type="submit">Validate</a></div>
                 </div>
               </form>
