--- a/form/02-article.html
+++ b/form/02-article.html
@@ -155,7 +155,8 @@
                 <div class="form-group col-2-3"></div>
               </fieldset>
               <fieldset>
-                <legend class="visually-hidden col-2-3">Your comment</legend>
+                <legend class="visually-hidden">Your comment</legend>
+                <div class="form-group col-2-3"></div>
                 <div class="form-group col-2-3"></div>
                 <div class="form-group"></div>
               </fieldset>
