Pushing README for cookies

--- a/JQuery_advanced/7-index.html
+++ b/JQuery_advanced/7-index.html
@@ -32,7 +32,7 @@
 
               var snippetParagraph = S('<p>').html(snippet);
               listItem.append(titleParagraph, snippetParagraph);
-              $('<ul>').append(listItem);
+              $('ul').append(listItem);
             }
 
             function queryWikipedia(search) {
