--- a/Cookies_local_storage/0-index.html
+++ b/Cookies_local_storage/0-index.html
@@ -1,47 +1,20 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Task 0</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-      body {
-        font-family: Arial, Helvetica, sans-serif;
-        margin: 0;
-        padding: 0;
-      }
-      .container {
-        display: fex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-      }
-      input {
-        margin-bottom: 10px;
-        padding: 5px;
-        width: 200px;
-      }
-      button {
-            padding: 8px 16px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-    </style>
   </head>
   <body>
-    <div class="container">
-      <input type="text" id="firstname" placeholder="Enter your first name">
-      <input type="text" id="email" placeholder="Enter your email">
+    <h1>Login to the website</h1>
+      <label for="firstname">First Name:</label>
+      <input type="text" id="firstname">
+      <label for="email">Email:</label>
+      <input type="text" id="email">
       <button onclick="setCookies()">Log me in</button>
+      <h2>Show the cookies</h2>
       <button onclick="showCookies()">Show the cookies</button>
-    </div>
-    <script src="src/index.js"></script>
+
+    <script src="src/index.js" async defer></script>
   </body>
 </html>
