--- a/Cookies_local_storage/1-index.html
+++ b/Cookies_local_storage/1-index.html
@@ -15,6 +15,27 @@
       <h2>Show the cookies</h2>
       <button onclick="showCookies()">Show the cookies</button>
 
-    <script src="src/index.js" async defer></script>
+    <script>
+
+      function setCookies() {
+        var firstnameValue = document.getElementById('firstname').value;
+        var emailValue = document.getElementById('email').value;
+
+        var currentDate = new Date();
+        var expirationDate = new Date(currentDate.getTime() + (10 * 24 * 60 * 60 * 1000));
+
+        document.cookie(`firstname=${firstnameValue}`, { expires: expirationDate, path: '/'});
+        document.cookie(`email=${emailValue}`, { expires: expirationDate, path: '/'});
+      }
+
+      function showCookies() {
+        var email = Cookies.get('email');
+        var firstname = Cookies.get('firstname');
+
+        var cookiesParagraph = document.createElement('p');
+        cookiesParagraph.textContent = `Email: ${email} - Firstname: ${firstname}`;
+        document.body.appendChild(cookiesParagraph);
+      }
+    </script>
   </body>
 </html>
