--- a/Cookies_local_storage/2-index.html
+++ b/Cookies_local_storage/2-index.html
@@ -15,6 +15,40 @@
       <h2>Show the cookies</h2>
       <button onclick="showCookies()">Show the cookies</button>
 
-    <script src="src/index.js" async defer></script>
+    <script>
+      function setCookies() {
+        var firstnameValue = document.getElementById('firstname').value;
+        var emailValue = document.getElementById('email').value;
+
+        var currentDate = new Date();
+        var expirationDate = new Date(currentDate.getTime() + (10 * 24 * 60 * 60 * 1000));
+
+        document.cookie(`firstname=${firstnameValue}`, { expires: expirationDate, path: '/'});
+        document.cookie(`email=${emailValue}`, { expires: expirationDate, path: '/'});
+      }
+
+      function showCookies() {
+        var email = Cookies.get('email');
+        var firstname = Cookies.get('firstname');
+
+        var cookiesParagraph = document.createElement('p');
+        cookiesParagraph.textContent = `Email: ${email} - Firstname: ${firstname}`;
+        document.body.appendChild(cookiesParagraph);
+      }
+
+      function getCookie(name) {
+        const cookieName = `${name}=`;
+        const decodedCookie = decodeURIComponent(document.cookie);
+        const cookieArray = decodedCookie.split(';');
+        for (let i = 0; i < cookieArray.length; i++) {
+          const cookie = cookieArray[i].trim();
+          if (cookie.indexOf(cookieName) === 0) {
+            return cookie.substring(cookieName.length, cookie.length);
+          }
+        }
+        return '';
+      }
+
+    </script>
   </body>
 </html>
